--- a/Szkolenie/Views/NazwaKlasies/Index.cshtml
+++ b/Szkolenie/Views/NazwaKlasies/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<Szkolenie.Models.NazwaKlasy>
 
 @{
-                /**/
+    /**/
 
-                /**/
+    /**/
 
-                ViewBag.Title = "Index";
+    ViewBag.Title = "Index";
 }
 
 <h2>Index</h2>
@@ -64,6 +64,28 @@
         </tr>
     </tfoot>
 </table>
+
+<table id="example2" class="display" style="width:100%">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Phone</th>
+            <th>Id</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+      <th></th>
+      <th></th>
+      <th></th>
+      
+      
+      
+      
+        </tr>
+    </tbody>
+</table>
+
 @section Scripts{
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
@@ -79,4 +101,21 @@
                 ]
             });
         });
+
+         $(document).ready(function () {
+             $('#example2').DataTable({
+                 dom: 'Bfrtip',
+                 sAjaxSource: '@Url.Action("users", "nazwaKlasies")',
+                 columns: [
+                     { "data": "Name" },
+                     { "data": "PhoneNumber" },
+                     { "data": "Id" }
+
+                ]
+            });
+        });
+
     </script>}
+
+
+
