--- a/Szkolenie/Views/NazwaKlasies/Index.cshtml
+++ b/Szkolenie/Views/NazwaKlasies/Index.cshtml
@@ -105,7 +105,7 @@
          $(document).ready(function () {
              $('#example2').DataTable({
                  dom: 'Bfrtip',
-                 sAjaxSource: '@Url.Action("users", "nazwaKlasies")',
+                 sAjaxSource: '@Url.Action("getUsers", "nazwaKlasies")',
                  columns: [
                      { "data": "Name" },
                      { "data": "PhoneNumber" },
