--- a/Szkolenie/Views/NazwaKlasies/Index.cshtml
+++ b/Szkolenie/Views/NazwaKlasies/Index.cshtml
@@ -75,13 +75,13 @@
     </thead>
     <tbody>
         <tr>
-      <th></th>
-      <th></th>
-      <th></th>
-      
-      
-      
-      
+            <th></th>
+            <th></th>
+            <th></th>
+
+
+
+
         </tr>
     </tbody>
 </table>
@@ -114,7 +114,7 @@
                 ]
             });
         });
-
+        console.log("Nowa tabela");
     </script>}
 
 
