--- a/Szkolenie/Views/Shared/_Layout.cshtml
+++ b/Szkolenie/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Nowa Klasa", "Index", "NazwaKlasies")</li>
-                    <li>@Html.ActionLink("Zgłoszenie", "Index", "Clients")</li>
+                    <li>@Html.ActionLink("Zgłoszenie", "create", "Clients")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
